# project_euler_solutions

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/utils/: factors.rs  mod.rs  primes.rs
