[package]
name = "project_euler"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-vec = "0.8.0"
cached = "0.55.1"
dashu = "0.4.2"
fraction = "0.15.3"
num-traits = "0.2.19"
paste = "1.0.15"
permutohedron = "0.2.4"
rand = "0.9.0"

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
correctness = { level = "forbid", priority = -1 }
perf = { level = "forbid", priority = -2 }
pedantic = { level = "deny", priority = -3 }
style = { level = "warn", priority = -4 }
complexity = { level = "warn", priority = -5 }
suspicious ={ level = "warn", priority = -6}

redundant-clone = { level = "warn", priority = -4 }
derive-partial-eq-without-eq = { level = "warn", priority = -5 }
unnecessary-struct-initialization = { level = "warn", priority = -6 }
redundant-pub-crate = { level = "warn", priority = -7 }
missing-const-for-fn = { level = "deny", priority = -8 }
uninlined-format-args = "allow"
